added new shapes for practice

--- a/circles.html
+++ b/circles.html
@@ -7,13 +7,19 @@
 		// Create a Paper.js Path to draw a line into it:
 		var path = new Path();
 		// Give the stroke a color
-		path.strokeColor = 'black';
-		var start = new Point(100, 100);
+		path.strokeColor = 'green';
+		var start = new Point(0, 100);
 		// Move to start and draw a line from there
 		path.moveTo(start);
 		// Note the plus operator on Point objects.
 		// PaperScript does that for us, and much more!
-		path.lineTo(start + [ 100, -50 ]);
+		path.lineTo(start + [ 700, -100 ]);
+
+		var circle1 = new Path.Circle(new Point(50, 50), 50);
+		circle1.fillColor = "red"; 
+
+		var circle2 = new Path.Circle(new Point(200, 80), 70);
+		circle2.fillColor = "#232323";
 	</script>
 </head>
 <body>
