--- a/circles.html
+++ b/circles.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Tap Sound</title>
 	<script type="text/javascript" src="paper-full.js"></script>
+	<link rel="stylesheet" type="text/css" href="circles.css">
 	<script type="text/paperscript" canvas="myCanvas">
 		// Create a Paper.js Path to draw a line into it:
 		var path = new Path();
