reorganized file structure again

--- a/practice.html
+++ b/practice.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Tap Sound</title>
-	<script type="text/javascript" src="paper-full.js"></script>
+	<title>Practice with Canvas</title>
 	<link rel="stylesheet" type="text/css" href="circles.css">
+	<script type="text/javascript" src="paper-full.js"></script>
+
 	<script type="text/paperscript" canvas="myCanvas">
-	
+
 		for(var x = 0; x < 1000; x+=100){
 			for(var y = 0; y < 1000; y+=100){
-				var circle3 = new Path.Circle(new Piont(x, y) 15);
-				circle3.fillColor = "purple";
+				var circle = new Path.Circle(new Point(x , y) 15);
+				circle.fillColor = "purple"
 			}
 		}
-
 	</script>
 </head>
 <body>
 	<canvas id="myCanvas" resize></canvas>
+
 </body>
 </html>
+
