--- a/circles.html
+++ b/circles.html
@@ -5,14 +5,12 @@
 	<script type="text/javascript" src="paper-full.js"></script>
 	<link rel="stylesheet" type="text/css" href="circles.css">
 	<script type="text/paperscript" canvas="myCanvas">
-	
-		for(var x = 0; x < 1000; x+=100){
-			for(var y = 0; y < 1000; y+=100){
-				var circle3 = new Path.Circle(new Piont(x, y) 15);
-				circle3.fillColor = "purple";
-			}
-		}
 
+	for(var x = 0; x < 1000; x+= 100){
+		for(var y = 0; y < 1000; y+= 100){
+			new Path.Circle(new Point(x, y), 10).fillColor = "yellow";
+		}
+	}
 	</script>
 </head>
 <body>
