--- a/practice.html
+++ b/practice.html
@@ -7,12 +7,11 @@
 
 	<script type="text/paperscript" canvas="myCanvas">
 
-		for(var x = 0; x < 1000; x+=100){
-			for(var y = 0; y < 1000; y+=100){
-				var circle = new Path.Circle(new Point(x , y) 15);
-				circle.fillColor = "purple"
-			}
+	for(var x = 0; x < 1000; x+= 100){
+		for(var y = 0; y < 1000; y+= 100){
+			new Path.Circle(new Point(x, y), 10).fillColor = "yellow";
 		}
+	}
 	</script>
 </head>
 <body>
