--- a/circles.html
+++ b/circles.html
@@ -4,13 +4,19 @@
 	<title>Tap Sound</title>
 	<script type="text/javascript" src="paper-full.js"></script>
 	<link rel="stylesheet" type="text/css" href="circles.css">
+
 	<script type="text/paperscript" canvas="myCanvas">
 
-	for(var x = 0; x < 1000; x+= 100){
-		for(var y = 0; y < 1000; y+= 100){
-			new Path.Circle(new Point(x, y), 10).fillColor = "yellow";
-		}
+	var xCoordinate = Math.floor(Math.random * 300);
+	var yCoordinate = Math.floor(Math.random * 300); 
+	var radius = Math.floor(Math.random * 50);
+
+	function onKeyDown(event){
+		new Path.Circle(new Point(xCoordinate, yCoordinate), radius).fillColor = "#ffffff";
 	}
+
+
+
 	</script>
 </head>
 <body>
